# POS-tagging-and-Pretokenized-sentence-generator

./: helpers.py  pyproject.toml  task1.py  task2.py
